chore: add new test for get retake exam service and refactor get retake exam service